[package]
name = "create50"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
env = "1.0.1"
env_logger = "0.11"
git2 = "0.20"
log = "0.4"
octocrab = "0.49"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
serde_ron = "1"
tokio = { version = "1", features = ["full"] }
ureq = "3.2.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
